alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ input[type='radio']:checked:after {
 }
 
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1200px) and (min-width:1023px) {
     .headingMain {
         font-size: 32px;
         font-weight: 500;
@@ -194,10 +194,82 @@ input[type='radio']:checked:after {
     
     .modalRightContainer {
         /* flex: 8; */
-        margin-top: 5%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
     }
     .modalImgStyle{
-        mAX-width:500px
+        max-width:500px;
+    }
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-top: 3px;
+        left: 0;
+        top: 0;
+        width: 100%; 
+        height: 100%;
+        /* overflow: auto; */
+        background-color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.4);
+       
+    }
+    
+    
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 90%;
+    }
+    
+    .close {
+        color: #aaaaaa;
+        /* float: right; */
+        font-size: 28px;
+        font-weight: bold;
+    }
+    
+    .close:hover,
+    .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
+    
+    .modalContent1 {
+        display: flex;
+        justify-content: space-between;
+        margin-left:120px;
+    }
+    
+    .modalContent2 {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    
+    
+    .modalRightContainerTitle {
+        font-size: 20px;
+        font-weight: 500;
+    }
+    
+    .modalRightContainerDesc li {
+        font-size: 16px;
+    }
+    
+    li {
+        list-style-type: none;
+    }
+    
+    ul.modalRightContainerDesc {
+        margin: 0;
+        padding: 0;
     }
 
 }
@@ -262,74 +334,83 @@ input[type='radio']:checked:after {
     .desc5 {
         font-size: 12px;
     }
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        padding-top: 100px;
+        left: 0;
+        top: 0;
+        width: 100%; 
+        height: 100%;
+        /* overflow: auto; */
+        background-color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.4);
+       
+    }
+    
+    
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+    }
+    
+    .close {
+        color: #aaaaaa;
+        /* float: right; */
+        font-size: 28px;
+        font-weight: bold;
+    }
+    
+    .close:hover,
+    .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
+    
+    .modalContent1 {
+        display: flex;
+        justify-content: space-between;
+        
+    }
+    
+    .modalContent2 {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .modalRightContainer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .modalRightContainerTitle {
+        font-size: 20px;
+        font-weight: 500;
+    }
+    
+    .modalRightContainerDesc li {
+        font-size: 16px;
+    }
+    
+    li {
+        list-style-type: none;
+    }
+    
+    ul.modalRightContainerDesc {
+        margin: 0;
+        padding: 0;
+    }
 }
 
 
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-   
-}
 
-
-.modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
-
-.close {
-    color: #aaaaaa;
-    /* float: right; */
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.modalContent1 {
-    display: flex;
-    justify-content: space-between;
-}
-
-.modalContent2 {
-    display: flex;
-}
-
-
-.modalRightContainerTitle {
-    font-size: 20px;
-    font-weight: 500;
-}
-
-.modalRightContainerDesc li {
-    font-size: 16px;
-}
-
-li {
-    list-style-type: none;
-}
-
-ul.modalRightContainerDesc {
-    margin: 0;
-    padding: 0;
-}
 
 .annotation-note-title{
     font-size: 10;
@@ -348,13 +429,13 @@ svg text:hover{
 #tooltip {
     position: absolute;
     display: none;
-    background: "#352F44";
+    /* background: "#352F44"; */
     border-radius: 3px;
     box-shadow: -3px 3px 15px #939393;
     color: black;
     padding: 6px;
-    font-family: "Merriweather";
-    font-size: 1.1em;
+    font-family: "Infer";
+    font-size: 0.9em;
     /* max-width: 400px; */
     z-index: 100;
 }
@@ -371,9 +452,7 @@ svg text:hover{
     /* max-width: 400px; */
     z-index: 100;
 }
-.box{
-    /* cursor: pointer; */
-}
+
 .bottomBox{
     font-family: 'Inter';
     font-weight: 10;
